<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.app.william.golfscoretracker.AddNewScore"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_date"
            android:textSize="15dp"
            android:layout_weight="0.04" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:id="@+id/date"
            android:onClick="showDatePickerDialog"
            style="@android:style/Widget.DeviceDefault.Light.Spinner"
            android:textSize="15dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_score"
            android:textSize="15dp"
            android:layout_weight="0.05" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:id="@+id/score"
            android:editable="true"
            android:inputType="number"
            android:textSize="15dp"/>



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="92dp"
            android:layout_height="wrap_content"
            android:text="@string/enter_course"/>

        <Spinner
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:id="@+id/course_spinner"
            android:layout_weight="0.48" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_par"
            android:layout_weight="0.12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/par"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_new_score"
        android:text="@string/action_new_score"
        android:onClick="addScore"/>

</LinearLayout>
