<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/top_card"
    android:layout_gravity="top"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    card_view:cardElevation = "2dp"
    card_view:contentPaddingBottom = "5dp"
    card_view:contentPaddingLeft = "5dp"
    card_view:contentPaddingRight = "5dp"
    card_view:contentPaddingTop = "5dp">

    <LinearLayout
        android:layout_height = "match_parent"
        android:layout_width = "match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/date"
                android:textSize="20dp"
                android:layout_weight="0.05" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textSize="20dp"
                android:layout_weight="0.94" />

        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/course"
                android:textSize="20dp"
                android:layout_weight="0.09" />

            <TextView
                android:id="@+id/course"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textSize="20dp"
                android:layout_weight="0.72" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/enter_par"
                android:textSize="20dp"
                android:layout_weight="0.08" />

            <TextView
                android:id="@+id/par"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textSize="20dp"
                android:layout_weight="0.27" />

        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/score"
                android:textSize="20dp"
                android:layout_weight="0.05" />

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textSize="20dp"/>

        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>